# Radia_NGSolve

./: .gitignore  BUILD.md  BUILD_QUICK_START.md  Build.ps1  Build_NGSolve.ps1  Build_PyPI_Package.ps1  CF_BACKGROUND_FIELD_BUILD_SUCCESS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_QUALITY_REPORT.md  COPYRIGHT.txt  DIRECTORY_STRUCTURE.md  HMATRIX_FIX_SUMMARY.md  MANIFEST.in  PYPI_DISTRIBUTION.md  RAD_NGSOLVE_BUILD_SUCCESS.md  README.md  README_BUILD.md  REFACTORING_ANALYSIS.md  REFACTORING_PLAN.md  SECURITY_ALERT.md  SECURITY_FIXES.md  analyze_header_usage.sh  benchmark_heavy.py  benchmark_hmatrix.py  build_all.ps1  build_ngsolve.ps1  build_pypi_package.cmd  build_rad_ngsolve.bat  build_rad_ngsolve_full.bat  pypi_upload.cmd  pyproject.toml  pytest.ini  rename_core_files.sh  rename_final_batch.sh  rename_headers.sh  rename_remaining_files.sh  run_hmatrix_examples.py  setup.py  (+15 more)
.claude/: CLAUDE.md  settings.local.json
docs/: API_EXTENSIONS.md  API_REFERENCE.md  BATCH_EVALUATION_PROPOSAL.md  CF_BACKGROUND_FIELD_IMPLEMENTATION.md  CLAUDE.md  DIRECTORY_STRUCTURE.md  DISK_CACHE_DESIGN.md  EXAMPLES_REVIEW.md  FULL_HMATRIX_SERIALIZATION_DESIGN.md  HACAPK_INTEGRATION_COMPLETE.md  HACAPK_INTEGRATION_PLAN.md  HMATRIX_BENCHMARKS_RESULTS.md  HMATRIX_CACHE_IMPLEMENTATION.md  HMATRIX_CRITICAL_BUG.md  HMATRIX_ENHANCEMENT_PROPOSAL_2025.md  HMATRIX_IMPLEMENTATION_HISTORY.md  HMATRIX_MATVEC_OPTIMIZATION.md  HMATRIX_PERFORMANCE_IMPROVEMENT.md  HMATRIX_PHASE1_IMPLEMENTATION.md  HMATRIX_SERIALIZATION.md  HMATRIX_TEST_RESULTS.md  HMATRIX_USER_GUIDE.md  MATERIAL_API_IMPLEMENTATION.md  ML_PARAMETER_TUNING.md  NGSOLVE_CF_BACKGROUND_FIELD_DESIGN.md  NGSOLVE_DLL_ISSUE.md  NGSOLVE_INTEGRATION.md  NGSOLVE_INTEGRATION_STATUS.md  NGSOLVE_PYTHON_SOLUTION.md  NGSOLVE_USAGE_GUIDE.md  OPENMP_PERFORMANCE_REPORT.md  OPENMP_性能レポート.md  PHASE2A_IMPLEMENTATION_SUMMARY.md  PHASE2B_IMPLEMENTATION_SUMMARY.md  PHASE3B_IMPLEMENTATION_REPORT.md  PHASE3_ANALYSIS.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_PERFORMANCE_ISSUE.md  PHASE4_STATUS.md  PYPI_RELEASE_v1.0.10.md  (+6 more)
docs/scripts/: apply_security_fixes.py  fix_test_imports.py  security_fixes.patch
examples/: README.md  test_hmatrix_accuracy.py  test_hmatrix_cube_nonlinear.py  test_hmatrix_parallel.py  test_solver_hmatrix.py
examples/.claude/: settings.local.json
examples/2023_10_01_サマコバ/: magnet.nb
examples/2023_10_23_磁場の再構築/: 2024_01_31_york.jou  2024_02_02_york_tetmesh.jou  Biot_Savart.m  Magnets.py  Step_1_Generate_Coil_Generation_Surface_double.m  check_SVD_matrix.m  mask.m  radia.pyd
examples/202401_08_卓上NMRの計算/: 2023_11_09_manet_array.py  2023_11_11_manet_array.py  2023_11_23_two_manets.py  2023_11_26_Cubit_to_Radia.py  2024_01_28_Geometry表示の確認.py  2024_01_28_Sphere.mat  2024_01_28_Sphere.py  2024_03_05_single_turn_coil.py  ELF_magicの対策.pptx  MagneticFluxDensity.vtk  RADIA.vtk  Sphere.jou  case01.pvsm  contour_Radia_3D.py  plot_Radia_3D.py
examples/2024_02_03_振分電磁石/: 2024_01_30_Radiaの練習_01.py  2024_01_30_Radiaの練習_02.py  2024_01_30_振り分け電磁石.py  2024_01_31_york_tetmesh.jou  2024_02_01_振り分け電磁石.py  COIL.py  MagneticFluxDensity.vtk  PYVISTA_VIEWER.md  TEST_SUMMARY.md  VTK_EXPORT_TEST.md  my_module.py  test_export.vtk  test_practice_01.py  test_practice_02.py  test_pyvista_viewer.py  test_vtk_export.py  test_振り分け_simplified.py
examples/2024_03_02_Rdaiaの6面隊が動作しない調査(要素)/: 2024_02_01_Radiaの6面体調査.xlsx  2024_02_01_brick_webcut_case_01.py  2024_02_01_brick_webcut_case_02.py  2024_02_01_brix1_angle1-15.txt  FINAL_SUMMARY.md  HEXAHEDRON_TEST_REPORT.md  angle_1.bdf  test_case01_coords.py  test_case01_with_cubit.py  test_case02_with_cubit.py  test_degenerate_hex.py  test_degenerate_one_by_one.py  test_extreme_angles.py  test_hexahedron.py
examples/H-matrix/: BENCHMARK_RESULTS.md  HMATRIX_FIELD_DESIGN.md  README.md  benchmark_field_evaluation.py  benchmark_hmatrix_field.py  benchmark_parallel_construction.py  benchmark_solver.py  run_all_benchmarks.py  run_all_hmatrix_benchmarks.py  verify_field_accuracy.py
examples/NGSolve_CoefficientFunction_to_Radia_BackgroundField/: README.md  sphere.bdf  sphere_nastran_analysis.py  sphere_nastran_field.pvsm  sphere_nastran_geometry.vtk
examples/NGSolve_Integration/: HMATRIX_ANALYSIS.md  HMATRIX_FIELD_EVALUATION_ISSUE.md  (+22 more)
internal/: README.md
src/ext/HACApK_LH-Cimplm/: CMakeLists.txt  LICENSE  Makefile.dep  bem-bb-config.txt  bem-bb-fw-HACApK-0.100.4.f90  cHACApK_base.c  cHACApK_base.h  cHACApK_base_if.c  cHACApK_calc_entry_ij.f90  cHACApK_calc_entry_ij.h  cHACApK_lib.c  cHACApK_lib.h  hacapk.cpp  hacapk.hpp  m_HACApK_base.f90  m_HACApK_base_c.f90  m_HACApK_calc_entry_ij.f90  m_HACApK_calc_entry_record.f90  m_HACApK_solve.f90  m_HACApK_use.f90  m_ppohBEM_bembb2hacapk.f90  m_ppohBEM_matrix_element_ij.f90  m_stl.f90  test_hacapk.cpp
tests/: README.md  __init__.py  benchmark_hmatrix.py  conftest.py  profile_batch_performance.py  test_advanced.py  test_all_spaces.py  test_batch_evaluation.py  test_cf_direct.py  test_convergence_hdiv.py  test_curlA_equals_B.py  test_curl_A_detailed.py  test_far_field_accuracy.py  test_group_operations.py  test_hcurl_vs_hdiv.py  test_hmatrix_cache.py  test_hmatrix_cache_simple.py  test_magpylib_comparison.py  test_materials.py  test_memory_allocation_tracking.py  test_moving_magnet_memory.py  test_moving_magnet_memory_diagnosis.py  test_new_material_api.py  test_ngsolve_reuse_gridfunction.py  test_ngsolve_units.py  test_order1.py  test_parallel_performance.py  test_process_memory.py  test_python_cached_simple.py  test_rad_ngsolve.py  test_rad_ngsolve_diagnostic.py  test_rad_ngsolve_function.py  test_rad_ngsolve_hmatrix.py  test_radhmat.cpp  test_radhmat.py  test_radia.py  test_radia_core_memory.py  test_radia_field_computation_memory.py  test_radia_ngsolve_longrun.py  test_radia_ngsolve_memory_leak.py  (+16 more)
tests/hacapk/: CMakeLists.txt  QUICKSTART.md  README.md  STATUS.md  build.cmd  build_msvc.cmd  hacapk_openmp.c  hacapk_openmp.h  test_hmatrix_basic.cpp  test_hmatrix_radia.cpp
tools/: analyze_cache_for_ml.py  generate_training_data.py  optimize_parameters_ml.py  verify_parameter_accuracy.py
(+357 files in other folders)
